--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@remixicon/react": "^4.2.0",
+    "appwrite": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
