--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "@remixicon/react": "^4.2.0",
+    "@tinymce/tinymce-react": "^4.3.2",
     "appwrite": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3"
   },
